# puigfp.github.io

./: .gitignore  404.html  README.md  config.js  index.html  main.b3bba2e8.js  main.b3bba2e8.js.map  package-lock.json  package.json  routeInfo.json  sitemap.xml  static.config.js  styles.7ff28886.css
.github/workflows/: deploy.yml
blog/: atom.xml
blog/en/: atom.xml  index.html  routeInfo.json
blog/fr/: atom.xml  index.html  routeInfo.json
blog/post/2019-08-13-bokeh/: index.html  routeInfo.json
blog/post/2020-01-03-kmp/: index.html  routeInfo.json
blog/post/2020-01-03-kmp/code/: kmp.py  kmp_test.py  pyproject.toml
blog/post/2020-05-14-github-ssh/: index.html  index.md  routeInfo.json
plugins/puigfp-rss/: browser.api.js  node.api.js
public/blog/post/2019-08-13-bokeh/: index.md  plots.ipynb
public/blog/post/2020-01-03-kmp/: index.md
public/blog/post/2020-01-03-kmp/code/: .gitignore  plots.ipynb
public/blog/post/2020-05-14-github-ssh/: index.md
public/blog/post/draft-github-ssh/: index.md
src/: App.js  index.js
src/pages/: 404.js  index.js
src/pages/blog/: archives.js  post.js
src/style/: markdown.scss  style.scss
templates/: styles.75209627.js  styles.75209627.js.map  vendors~main.70b2b20c.js  vendors~main.70b2b20c.js.map
templates/__react_static_root__/src/pages/: 404.3b0c542a.js  404.3b0c542a.js.map  index.3f39d26c.js  index.3f39d26c.js.map
templates/__react_static_root__/src/pages/blog/: archives.b5c5b981.js  archives.b5c5b981.js.map  post.ff7d2ca5.js  post.ff7d2ca5.js.map
(+2 files in other folders)
