[tool.poetry]
name = "kmp"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.0"
seaborn = "^0.9.0"
jupyter = "^1.0.0"
matplotlib = "^3.1.2"
pytest = "^5.3.2"
pytest-benchmark = "^3.2.2"
black = {version = "^19.10b0", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
